kubernetes/utility/apps/flux-system/addons/app/webhooks/github/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
  annotations:
    external-dns.alpha.kubernetes.io/target: external-utility.rafaribe.com
spec:
  hostnames:
    - flux-webhook-utils.rafaribe.com
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
